# pyproject-template

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: docker-compose.extend.yml
docs/: docs.md
src/logger/: __init__.py  logger.py
src/module_or_project_name/: main.py
tests/: conftest.py
tests/tools/: test__logger.py
