[project]
name = "Template-python-project"
version = "0.1.0"
description = "This repository contains configurations to set up a Python development environment using VSCode's Dev Container feature. The environment includes uv and Ruff."

authors = [{name = "Niklas", email = "<email>.com"}]
maintainers = [{name = "Niklas", email = "<email>.com"}]

requires-python = ">=3.12"
readme = "README.md"
license = {file = "LICENSE"}

dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest-cov>=7.0.0",
    "pytest>=8.4.2",
    "ruff>=0.14.9",
    "ty>=0.0.1a34",
]

[tool.ruff]
extend-exclude = ["__*"]
line-length = 100
indent-width = 4

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true
docstring-code-line-length = 100
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint]
exclude = ["tests/"]
ignore = [
    "ANN002", # missing-type-args
    "ANN003", # missing-type-kwargs
    "ANN401", # any-type
    "E402",   # module-import-not-at-top-of-file
    "E501",   # line-too-long
    "SIM118", # in-dict-keys
]
select = [
    "ANN", # flake8-annotations
    "B",   # flake8-bugbear
    "E",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "ISC", # flake8-implicit-str-concat
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
]


[tool.ty.src]
exclude = ["__*"]

[tool.ty.rules]
unresolved-attribute = "ignore"


[tool.pytest.ini_options]
addopts = "--cov-report=term --cov-report=xml --cov=libs --cov=processes"
testpaths = ["tests"]

[tool.coverage.run]
# To include folders for coverage report, please add them to the pytest.ini_optitions.addopts above. This is to avoid warning messages.
# include = ["libs", "processes"]
omit = ["__init__.py", "libs/utilities/databricks.py", "libs/utilities/logger.py"]
